@@ -54,6 +54,7 @@ Mantis ChangeLog
  * Enh #3244: Add bug status to the autogenerated bug view link tooltips.
  * Fix #3252: Category not selected on update if "&" is used in category name.
  * Enh #3272: Bugnote links in view_all_inc now are painted in a 'not visited' color when there are new notes.
+ * Fix #3295: $g_limit_reporters doesn't work.
  * Optimized the database query in file_list_attachments() to improve performance of viewing bugs with large attachments.
  * Added Mantis FAQ to documentation folder.
 
